@@ -17,5 +17,17 @@ but not in project src file.
 
 java --module-path lib/javafx/lib add-modules javafx.controls -jar theKeyboard.jar
 
-but requires lib/javafx/lib to be downloaded, and be in the same folder as theKeyboard.jar file. I am working on improving the user experience by structuring the project in a msi, rpm, and other bundles for different distributions, which would ease the testing of the project. 
+but requires lib/javafx/lib to be downloaded, and be in the same folder as theKeyboard.jar file which is why these are provided in folder the_keyboard_jar, and that you may _cd_ to the correct folder, where it had been downloaded for example. 
+      I am working on improving the user experience by structuring the project in a msi, rpm, and other bundles for different distributions, which would ease the testing of the project. 
     This will be done manually in jpackage likely, without the compromise of an IDE. Code files, without compiled files can be found in another folder name the_keyboard_code.
+      This code can be compiled, and run by the two commands provided that you _cd_ to the correct folder, for example where they had been downloaded (and are right now).
+
+javac --module-path ../lib/javafx/lib --add-modules javafx.controls TheKeyboard.java
+
+java --module-path ../lib/javafx/lib --add-modules javafx.controls TheKeyboard
+
+javac (command), which will compile the files to .class files, and 
+java (command), which will run the (compiled) .class files.
+
+This code had been written without version-control, but any changes made to the project will be observable in git version control. 
+      
